--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Experimenting with React SSR",
   "scripts": {
+    "test": "mocha -r babel-core/register --recursive",
     "clean": "rimraf dist/",
     "prebuild": "yarn clean",
     "build": "webpack",
@@ -20,6 +21,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
+    "prop-types": "next",
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.0.0-beta.5",
     "require-clean": "^0.1.3",
@@ -27,6 +29,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -35,12 +38,23 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
+    "chai": "^4.1.1",
+    "chai-enzyme": "^0.8.0",
     "connect-browser-sync": "^2.1.0",
+    "css-loader": "^0.28.5",
+    "enzyme": "^2.9.1",
     "graphql": "^0.11.1",
     "graphql-tag": "^2.4.2",
+    "mocha": "^3.5.0",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
+    "postcss-loader": "^2.0.6",
+    "react-test-renderer": "next",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "stylelint": "^8.0.0",
+    "to-string-loader": "^1.1.5",
     "webpack": "^3.5.5",
     "webpack-node-externals": "^1.6.0"
   }
