--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "description": "Experimenting with React SSR",
   "scripts": {
+    "profile": "webpack --profile --json > stats.json",
     "test": "mocha -r babel-core/register --recursive",
-    "clean": "rimraf dist/",
-    "prebuild": "yarn clean",
+    "prebuild": "yarn",
     "build": "webpack",
     "watch": "webpack --watch",
     "server": "nodemon lib/sandbox/index.js",
-    "prestart": "yarn build",
+    "prestart": "webpack",
     "start": "run-p watch server"
   },
   "repository": "https://github.com/dnutels/ssr.git",
@@ -20,6 +20,7 @@
     "compression": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "prop-types": "next",
     "react": "^16.0.0-beta.5",
@@ -32,6 +33,7 @@
     "autoprefixer": "^7.1.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -40,6 +42,7 @@
     "browser-sync": "^2.18.13",
     "chai": "^4.1.1",
     "chai-enzyme": "^0.8.0",
+    "clean-webpack-plugin": "^0.1.16",
     "connect-browser-sync": "^2.1.0",
     "css-loader": "^0.28.5",
     "enzyme": "^2.9.1",
@@ -49,13 +52,18 @@
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
+    "optimize-js-plugin": "^0.0.4",
     "postcss-loader": "^2.0.6",
     "react-test-renderer": "next",
-    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
+    "stats-webpack-plugin": "^0.6.1",
     "stylelint": "^8.0.0",
     "to-string-loader": "^1.1.5",
+    "uglify-es": "^3.0.28",
+    "uglifyjs-webpack-plugin": "next",
     "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0"
   }
 }
