--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "profile": "webpack --profile --json > stats.json",
     "test": "mocha -r babel-core/register --recursive",
-    "prebuild": "yarn",
     "build": "webpack",
     "watch": "webpack --watch",
     "server": "nodemon lib/sandbox/index.js",
@@ -20,6 +19,7 @@
     "compression": "^1.7.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "fs-extra": "^4.0.1",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "prop-types": "next",
@@ -46,21 +46,30 @@
     "connect-browser-sync": "^2.1.0",
     "css-loader": "^0.28.5",
     "enzyme": "^2.9.1",
+    "eslint": "^4.6.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-compat": "^1.0.4",
+    "glob": "^7.1.2",
     "graphql": "^0.11.1",
     "graphql-tag": "^2.4.2",
+    "image-webpack-loader": "^3.4.2",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "optimize-js-plugin": "^0.0.4",
     "postcss-loader": "^2.0.6",
+    "raw-loader": "^0.5.1",
     "react-test-renderer": "next",
     "sass-loader": "^6.0.6",
     "stats-webpack-plugin": "^0.6.1",
     "stylelint": "^8.0.0",
+    "svg-inline-loader": "^0.8.0",
     "to-string-loader": "^1.1.5",
     "uglify-es": "^3.0.28",
     "uglifyjs-webpack-plugin": "next",
+    "url-loader": "^0.5.9",
+    "util.promisify": "^1.0.0",
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0",
