--- a/src/pages/unification/package.json
+++ b/src/pages/unification/package.json
@@ -1,6 +1,9 @@
 {
-  "type": "Page",
+  "private": true,
+  "type": "page",
   "name": "unification",
   "version": "0.0.1",
-  "dependencies": {}
+  "dependencies": {
+    "header": "0.0.1"
+  }
 }
