--- a/package.json
+++ b/package.json
@@ -49,14 +49,15 @@
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-compat": "^1.0.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "glob": "^7.1.2",
     "graphql": "^0.11.1",
     "graphql-tag": "^2.4.2",
-    "image-webpack-loader": "^3.4.2",
     "mocha": "^3.5.0",
     "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
+    "on-build-webpack": "^0.1.0",
     "optimize-js-plugin": "^0.0.4",
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
@@ -73,6 +74,7 @@
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "zip-dir": "^1.0.2"
   }
 }
