--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.0.0-beta.5",
     "require-clean": "^0.1.3",
+    "semver": "^5.4.1",
     "uuid": "^3.1.0",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.3",
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
@@ -40,23 +41,23 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
-    "chai": "^4.1.1",
+    "chai": "^4.1.2",
     "chai-enzyme": "^0.8.0",
     "clean-webpack-plugin": "^0.1.16",
     "connect-browser-sync": "^2.1.0",
-    "css-loader": "^0.28.5",
+    "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-compat": "^1.0.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "glob": "^7.1.2",
-    "graphql": "^0.11.1",
+    "graphql": "^0.11.3",
     "graphql-tag": "^2.4.2",
-    "mocha": "^3.5.0",
+    "mocha": "^3.5.3",
     "node-sass": "^4.5.3",
-    "nodemon": "^1.11.0",
-    "npm-run-all": "^4.0.2",
+    "nodemon": "^1.12.0",
+    "npm-run-all": "^4.1.1",
     "on-build-webpack": "^0.1.0",
     "optimize-js-plugin": "^0.0.4",
     "postcss-loader": "^2.0.6",
@@ -64,14 +65,14 @@
     "react-test-renderer": "next",
     "sass-loader": "^6.0.6",
     "stats-webpack-plugin": "^0.6.1",
-    "stylelint": "^8.0.0",
+    "stylelint": "^8.1.1",
     "svg-inline-loader": "^0.8.0",
     "to-string-loader": "^1.1.5",
-    "uglify-es": "^3.0.28",
+    "uglify-es": "^3.1.0",
     "uglifyjs-webpack-plugin": "next",
     "url-loader": "^0.5.9",
     "util.promisify": "^1.0.0",
-    "webpack": "^3.5.5",
+    "webpack": "^3.5.6",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
