--- a/package.json
+++ b/package.json
@@ -15,66 +15,67 @@
   "author": "Dmitry Nutels <dnutels@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^2.1.0",
-    "compression": "^1.7.0",
+    "chalk": "^2.3.0",
+    "compression": "^1.7.1",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4",
-    "fs-extra": "^4.0.1",
+    "express": "^4.16.2",
+    "fs-extra": "^4.0.2",
     "lodash": "^4.17.4",
-    "morgan": "^1.8.2",
+    "morgan": "^1.9.0",
     "prop-types": "next",
-    "react": "^16.0.0-beta.5",
-    "react-dom": "^16.0.0-beta.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "require-clean": "^0.1.3",
     "semver": "^5.4.1",
     "uuid": "^3.1.0",
-    "yargs": "^8.0.2"
+    "yargs": "^10.0.3"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.18.13",
     "chai": "^4.1.2",
-    "chai-enzyme": "^0.8.0",
-    "clean-webpack-plugin": "^0.1.16",
+    "chai-enzyme": "1.0.0-beta.0",
+    "clean-webpack-plugin": "^0.1.17",
     "connect-browser-sync": "^2.1.0",
     "css-loader": "^0.28.7",
-    "enzyme": "^2.9.1",
-    "eslint": "^4.6.1",
+    "enzyme": "^3.1.1",
+    "enzyme-adapter-react-16": "^1.0.4",
+    "eslint": "^4.10.0",
     "eslint-loader": "^1.9.0",
-    "eslint-plugin-compat": "^1.0.4",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "eslint-plugin-compat": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.2",
-    "graphql": "^0.11.3",
-    "graphql-tag": "^2.4.2",
-    "mocha": "^3.5.3",
-    "node-sass": "^4.5.3",
-    "nodemon": "^1.12.0",
-    "npm-run-all": "^4.1.1",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.6.0",
+    "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.2",
     "on-build-webpack": "^0.1.0",
     "optimize-js-plugin": "^0.0.4",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.8",
     "raw-loader": "^0.5.1",
-    "react-test-renderer": "next",
+    "react-test-renderer": "^16.0.0",
     "sass-loader": "^6.0.6",
     "stats-webpack-plugin": "^0.6.1",
-    "stylelint": "^8.1.1",
+    "stylelint": "^8.2.0",
     "svg-inline-loader": "^0.8.0",
     "to-string-loader": "^1.1.5",
-    "uglify-es": "^3.1.0",
+    "uglify-es": "^3.1.8",
     "uglifyjs-webpack-plugin": "next",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.6.2",
     "util.promisify": "^1.0.0",
-    "webpack": "^3.5.6",
+    "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-merge": "^4.1.0",
+    "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
     "zip-dir": "^1.0.2"
   }
